--- a/proizvodi2.html
+++ b/proizvodi2.html
@@ -2,19 +2,22 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description"
+    content="Viktorija DOM - Proizvodnja betonskih blokova, cevi, propusta i građevinskog materijala.">
 
-  <title>Inance</title>
+  <meta property="og:title" content="Viktorija DOM - Proizvodnja betonskih elemenata">
+  <meta property="og:description"
+    content="Betonski blokovi, cevi, propusti i građevinski materijal vrhunskog kvaliteta.">
+  <meta property="og:image" content="slike/pocetnaslika.jpg">
+  <meta property="og:url" content="https://www.viktorijadom.rs">
 
+  <title>Viktorija DOM</title>
+  <link rel="icon" href="slike/logotab.png" type="image/png">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
   <link href="css/style.css" rel="stylesheet" />
   <link href="css/responsive.css" rel="stylesheet" />
@@ -23,7 +26,6 @@
 
 <body>
   <div class="hero_area">
-    <!-- header section strats -->
     <header class="header_section">
       <div class="header_top">
         <div class="container-fluid">
@@ -83,10 +85,8 @@
         </div>
       </div>
     </header>
-    <!-- end header section -->
   </div>
 
-  <!-- about section -->
 
   <section class="about_section layout_padding">
     <div class="container">
@@ -123,14 +123,14 @@
 
 
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike\raster.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/raster.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">RASTER 40/40/10</p><p>masa: 119 kg/m<sup>2</sup> <br>na paleti: 10</p></div></td>
                  <td style="text-align: center;" width=170px><p class="cena">900 din/m<sup>2</sup></p></td>
             </tr></table>
       
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike\h1.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/h1.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">VENTILACIONI BLOK H1</p><p>masa: 16kg <br>na paleti: 60</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">132 din/kom.</p></td>
             </tr></table>
@@ -138,7 +138,7 @@
   
             <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike\h2.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/h2.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">VENTILACIONI BLOK H2</p><p>masa: 18kg <br>na paleti: 60</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">144 din/kom.</p></td>
             </tr></table>
@@ -152,98 +152,98 @@
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/plast 160.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/plast160.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">PLAŠT ŠIDEL FI 160</p><p>masa: 38kg <br>na paleti: 27</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">400 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/plast 200.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/plast200.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">PLAŠT ŠIDEL FI 200</p><p>masa: 40kg <br>na paleti: 27</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">450 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/dimnjacki blok.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/dimnjacki.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">DIMNjAČKI BLOK</p><p>masa: 13kg <br>na paleti: 80</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">132 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/temeljni 20.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/temeljni20.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">TEMELjNI BLOK 20</p><p>masa: 12kg<br>na paleti: 72</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">90 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/temeljni 25.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/temeljni25.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">TEMELjNI BLOK 25</p><p>masa: 60kg<br>na paleti: 72</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">120 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/temeljni 30.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/temeljni30.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">TEMELjNI BLOK 30</p><p>masa: 20kg<br>na paleti: 60</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">150 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slika.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/betonski10.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">ŠLjAKA BLOK 10</p><p>masa: 10kg<br>na paleti: 130</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">70 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/sljaka 15.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/sljaka15.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">ŠLjAKA BLOK 15</p><p>masa: 13kg<br>na paleti: 96</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">80 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slika.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/betonski20.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">ŠLjAKA BLOK 20</p><p>masa: 16kg<br>na paleti: 72</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">95 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/betonski 10.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/betonski10.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">BETONSKI BLOK 10</p><p>masa: 10kg <br>na paleti: 130</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">66 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/betonski 12.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/betonski12.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">BETONSKI BLOK 12</p><p>masa: 11,5kg <br>na paleti: 120</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">72 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/betonski 15.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/betonski15.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">BETONSKI BLOK 15</p><p>masa: 13kg <br>na paleti: 96</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">75 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/betonski 20.jpg" height="140"> </td>
+        <td width=10%> <img src="slike/betonski20.JPG" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">BETONSKI BLOK 20</p><p>masa: 16kg <br>na paleti: 75</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">90 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/betonski 25.png" height="140"> </td>
+        <td width=10%> <img src="slike/betonski25.png" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">BETONSKI BLOK 25</p><p>masa: 20kg <br>na paleti: 60</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">120 din/kom.</p></td>
             </tr></table>
@@ -252,9 +252,6 @@
   </div>
   </section>
 
-  <!-- end about section -->
-
-  <!-- info section -->
   <section class="info_section ">
     <div class="container">
       <h4>
@@ -322,12 +319,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
   <script src="js/custom.js"></script>
-  <!-- Google Map -->
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-  <!-- End Google Map -->
-
-
 </body>
 
 </html>
