Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
           <div class="slideshow-container">
             <div class="mySlides" style="display: block;">
-              <img src="galerija/1.JPG" style="width:100%">
+              <img src="https://viktorijadom.rs/galerija/1.JPG" style="width:100%">
             </div>
             <div class="mySlides">
               <img src="galerija/2.JPG" style="width:100%">
