Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
 
           <div class="slideshow-container">
             <div class="mySlides" style="display: block;">
-              <img src="https://viktorijadom.rs/galerija/1.JPG" style="width:100%">
+              <img src="/galerija/1.JPG" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/2.JPG" style="width:100%">
+              <img src="/galerija/2.JPG" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/3.JPG" style="width:100%">
+              <img src="/galerija/3.JPG" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/4.JPG" style="width:100%">
+              <img src="/galerija/4.JPG" style="width:100%">
             </div>
             <div class="mySlides">
               <img src="galerija/5.JPG" style="width:100%">
