--- a/onama.html
+++ b/onama.html
@@ -109,7 +109,10 @@
                         <h5>Zoran Rajković</h5>
                         <p><b>broj telefona:</b> 063/403 163<br><b>mail:</b> zoranvictoria@gmail.com</p>
                         <br>
-                        <p>Završio je Mašinski fakultet u Nišu (smer - procesno mašinstvo)...</p>
+                        <p>Završio je Mašinski fakultet u Nišu (smer - procesno mašinstvo).<br>
+                          U GPD "Viktorija DOM" d.o.o. radi od samog osnivanja najpre na poslovima organizacije proizvodnje i
+                          prodaje, a kasnije i na svim ostalim poslovima u okviru delatnosti.<br>
+                          Trenutno je u preduzeću zadužen za organizaciju, investicije i razvoj preduzeća.</p><br><br>
                     </div>
                 </div>
             </div>
@@ -122,7 +125,11 @@
                         <h5>Olgica Rajković</h5>
                         <p><b>broj telefona:</b> 063/48 40 60<br><b>mail:</b> olja.rajkovic71@gmail.com</p>
                         <br>
-                        <p>U GPD "Viktorija DOM" d.o.o. radi od 2012. godine...</p>
+                        <p>Olgica Rajković rođena je 1971. godine u Boljevcu.<br>
+                          U GPD "Viktorija DOM" d.o.o. radi od 2012. godine, najpre u knjigovodstvu, a kasnije i na svim ostalim
+                          poslovima u okviru delatnosti.<br>
+                          Trenutno je u preduzeću šef računovodstva, još je zadužena za finansije, investicije i razvoj
+                          preduzeća.</p><br><br>
                     </div>
                 </div>
             </div>
