--- a/proizvodi.html
+++ b/proizvodi.html
@@ -128,7 +128,7 @@
 
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi300.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi300.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 300 (nearmiran)</p>
@@ -144,7 +144,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi300.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi300.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 300 (armiran)</p>
@@ -160,7 +160,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi400.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi400.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 400 (nearmiran)</p>
@@ -176,7 +176,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi400.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi400.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 400 (armiran)</p>
@@ -192,7 +192,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi400.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi400.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 500 (nearmiran)</p>
@@ -208,7 +208,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi400.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi400.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 500 (armiran)</p>
@@ -224,7 +224,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi600.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi600.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 600 (nearmiran)</p>
@@ -240,7 +240,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi600.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi600.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 600 (armiran)</p>
@@ -256,7 +256,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi800.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi800.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 800 (nearmiran)</p>
@@ -272,7 +272,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/fi800.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/fi800.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 800 (armiran)</p>
@@ -288,7 +288,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/1000na250.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/1000na250.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 1000/250 (armiran)</p>
@@ -304,7 +304,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/1000na500.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/1000na500.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 1000/500 (armiran)</p>
@@ -320,7 +320,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/1000na1000.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/1000na1000.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 1000/1000 (armiran)</p>
@@ -336,7 +336,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/1000na600na700.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/1000na600na700.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">FI 1000/600/700 (armiran)</p>
@@ -352,7 +352,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/poklopac600.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/poklopac600.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">POKLOPAC ZA FI 600</p>
@@ -416,7 +416,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/konus.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/konus.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">KONUS 1000/600/900</p>
@@ -432,7 +432,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/rasteretniprsten.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/rasteretniprsten.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">RASTERETNI PRSTEN 130/15</p>
@@ -464,7 +464,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/gajger400.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/gajger400.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">GAJGER FI 400</p>
@@ -480,7 +480,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/gajger450.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/gajger450.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">GAJGER FI 450</p>
@@ -496,7 +496,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/pokrivnaploca.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/pokrivnaploca.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">POKRIVNA PLOČA 120/120/10</p>
@@ -512,7 +512,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/donjaploca.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/donjaploca.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">DONjA PLOČA 130/15</p>
