--- a/proizvodi3.html
+++ b/proizvodi3.html
@@ -129,7 +129,7 @@
 
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/ivicnjak80na8na12.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/ivicnjak80na8na12.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">ULIČNI IVIČNjAK 80/12/18</p>
@@ -146,7 +146,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/ivicnjak80na8na12.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/ivicnjak80na8na12.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">ULIČNI IVIČNjAK 80/18/24</p>
@@ -162,7 +162,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/ivicnjak80na8na12.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/ivicnjak80na8na12.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">ULIČNI IVIČNjAK 80/24/20</p>
@@ -178,7 +178,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/ivicnjak50na6.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/ivicnjak50na6.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">IVIČNjAK 50/6/12</p>
@@ -194,7 +194,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/ivicnjak50na11.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/ivicnjak50na11.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">IVIČNjAK 50/11/10</p>
@@ -226,7 +226,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/ivicnjak50na20na7.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/ivicnjak50na20na7.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">IVIČNjAK 50/20/7</p>
@@ -274,7 +274,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/kanaleta32na24.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/kanaleta32na24.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">KANALETA 32/24/8</p>
@@ -290,7 +290,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/kanaleta40na40na10.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/kanaleta40na40na10.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">KANALETA 40/40/10</p>
@@ -306,7 +306,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/kapapiramida.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/kapapiramida.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">KAPA PIRAMIDA</p>
@@ -322,7 +322,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/kapacrep.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/kapacrep.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">DIMNjAČKA KAPA CREP</p>
@@ -338,7 +338,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/postoljecrep.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/postoljecrep.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">POSTOLjE ZA KAPU CREP</p>
@@ -386,7 +386,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/okapnica3927.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/okapnica3927.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">OKAPNICA 39/27</p>
@@ -402,7 +402,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/okapnica8030.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/okapnica8030.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">OKAPNICA 80/30/6</p>
@@ -418,7 +418,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/plocica3.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/plocica3.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">BETONSKE PLOČICE 3CM</p>
@@ -434,7 +434,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/plocica5.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/plocica5.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">BETONSKE PLOČICE 5CM</p>
@@ -450,7 +450,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/plocica6.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/plocica6.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">BETONSKE PLOČICE 6CM</p>
@@ -482,7 +482,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/vinogradarski2.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/vinogradarski2.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">VINOGRADARSKI STUBOVI 2/0,1/0,08m</p>
@@ -498,7 +498,7 @@
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela">
         <tr>
-          <td width=10%> <img src="slike/vinogradarski2ipo.JPG" height="140"> </td>
+          <td width=10%> <img src="slike/vinogradarski2ipo.jpg" height="140"> </td>
           <td>
             <div class="proizvod">
               <p class="ime">VINOGRADARSKI STUBOVI 2,5/0,1/0,08m</p>
