--- a/index.html
+++ b/index.html
@@ -108,31 +108,31 @@
               <img src="/galerija/1.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="/galerija/2.JPG" style="width:100%">
+              <img src="/galerija/2.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="/galerija/3.JPG" style="width:100%">
+              <img src="/galerija/3.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="/galerija/4.JPG" style="width:100%">
+              <img src="/galerija/4.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/5.JPG" style="width:100%">
+              <img src="galerija/5.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/6.JPG" style="width:100%">
+              <img src="galerija/6.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/7.JPG" style="width:100%">
+              <img src="galerija/7.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/8.JPG" style="width:100%">
+              <img src="galerija/8.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/9.JPG" style="width:100%">
+              <img src="galerija/9.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-              <img src="galerija/10.JPG" style="width:100%">
+              <img src="galerija/10.jpg" style="width:100%">
             </div>
 
 
@@ -247,7 +247,7 @@
         <div class="col-sm-6 col-md-4 mx-auto">
           <div class="box ">
             <div class="img-box">
-              <img src="slike/1000 1000.JPG" alt="" />
+              <img src="slike/1000 1000.jpg" alt="" />
             </div>
             <div class="detail-box">
               <h4>
