--- a/proizvodi2.html
+++ b/proizvodi2.html
@@ -123,14 +123,14 @@
 
 
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/raster.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/raster.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">RASTER 40/40/10</p><p>masa: 119 kg/m<sup>2</sup> <br>na paleti: 10</p></div></td>
                  <td style="text-align: center;" width=170px><p class="cena">900 din/m<sup>2</sup></p></td>
             </tr></table>
       
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/h1.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/h1.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">VENTILACIONI BLOK H1</p><p>masa: 16kg <br>na paleti: 60</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">132 din/kom.</p></td>
             </tr></table>
@@ -152,14 +152,14 @@
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/plast160.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/plast160.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">PLAŠT ŠIDEL FI 160</p><p>masa: 38kg <br>na paleti: 27</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">400 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/plast200.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/plast200.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">PLAŠT ŠIDEL FI 200</p><p>masa: 40kg <br>na paleti: 27</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">450 din/kom.</p></td>
             </tr></table>
@@ -173,21 +173,21 @@
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/temeljni20.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/temeljni20.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">TEMELjNI BLOK 20</p><p>masa: 12kg<br>na paleti: 72</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">90 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/temeljni25.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/temeljni25.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">TEMELjNI BLOK 25</p><p>masa: 60kg<br>na paleti: 72</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">120 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/temeljni30.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/temeljni30.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">TEMELjNI BLOK 30</p><p>masa: 20kg<br>na paleti: 60</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">150 din/kom.</p></td>
             </tr></table>
@@ -208,7 +208,7 @@
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/betonski20.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/betonski20.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">ŠLjAKA BLOK 20</p><p>masa: 16kg<br>na paleti: 72</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">95 din/kom.</p></td>
             </tr></table>
@@ -229,14 +229,14 @@
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/betonski15.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/betonski15.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">BETONSKI BLOK 15</p><p>masa: 13kg <br>na paleti: 96</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">75 din/kom.</p></td>
             </tr></table>
   
       <hr style="height:2px; border-width:0; background-color:#c3c3c3">
       <table class="tabela"><tr>
-        <td width=10%> <img src="slike/betonski20.JPG" height="140"> </td>
+        <td width=10%> <img src="slike/betonski20.jpg" height="140"> </td>
                   <td><div class="proizvod"><p class="ime">BETONSKI BLOK 20</p><p>masa: 16kg <br>na paleti: 75</p></div></td>
                   <td style="text-align: center;" width=170px><p class="cena">90 din/kom.</p></td>
             </tr></table>
