--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div class="col-sm-6 col-md-4 mx-auto">
           <div class="box ">
             <div class="img-box">
-              <img src="slike/1000 1000.jpg" alt="" />
+              <img src="slike/1000na1000.jpg" alt="" />
             </div>
             <div class="detail-box">
               <h4>
@@ -259,7 +259,7 @@
         <div class="col-sm-6 col-md-4 mx-auto">
           <div class="box ">
             <div class="img-box">
-              <img src="slike/sljaka 15.jpg" alt="" />
+              <img src="slike/betonski15.jpg" alt="" />
             </div>
             <div class="detail-box">
               <h4>
@@ -271,7 +271,7 @@
         <div class="col-sm-6 col-md-4 mx-auto">
           <div class="box ">
             <div class="img-box">
-              <img src="slike/ivicnjak 50 16 8.jpg" alt="" />
+              <img src="slike/ivicnjak50na16na8.jpg" alt="" />
             </div>
             <div class="detail-box">
               <h4>
