--- a/proizvodi2.html
+++ b/proizvodi2.html
@@ -304,10 +304,10 @@
     </div>
     <div class="social-box">
       <div class="box">
-        <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/people/Viktorija-Dom-Leskovac/pfbid0HfbPExasbxcXcPqMYG63Ur24BZiNbpuEyg4HNLRKzdZCJqECqDr1VCXyWSRanfhkl/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
       </div>
       <div class="box">
-        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/viktorijadomleskovac/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       </div>
     </div>
   </section>
